// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditIcon: Component should render correctly 1`] = `
<edit.svg
  style={
    Object {
      "fill": "#1d1d20",
      "height": "30px",
      "width": "30px",
    }
  }
/>
`;

exports[`EditIcon: Component should render with custom styles 1`] = `
<edit.svg
  style={
    Object {
      "fill": "blue",
      "height": "30px",
      "width": "30px",
    }
  }
/>
`;

exports[`MenuIcon: Component should render correctly 1`] = `
<menu.svg
  style={
    Object {
      "fill": "#1d1d20",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;

exports[`MenuIcon: Component should render with custom styles 1`] = `
<menu.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;
